--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>DIY Renewable</title>
   <!-- Fauna One font on Google fonts -->
   <link href='http://fonts.googleapis.com/css?family=Belgrano' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/screen.css">
+  
+
 </head>
 <body>
   <header>
