--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <title>DIY Renewable</title>
+  <title>DIYR</title>
   <!-- Fauna One font on Google fonts -->
   <link href='http://fonts.googleapis.com/css?family=Belgrano' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/screen.css">
-  
+  <!-- Webpage Icon -->
+  <link rel="apple-touch-icon" href="images/touch-icon-iphone.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="images/touch-icon-ipad.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="images/touch-icon-iphone-retina.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="images/touch-icon-ipad-retina.png">
 
 </head>
 <body>
