change the hue of webpage icons, add bg-color of starting page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>DIYR</title>
   <!-- Fauna One font on Google fonts -->
   <link href='http://fonts.googleapis.com/css?family=Belgrano' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/screen.css">
+  <link rel="stylesheet" href="css/main.css">
   <!-- Webpage Icon -->
   <link rel="apple-touch-icon" href="images/touch-icon-iphone.png">
   <link rel="apple-touch-icon" sizes="72x72" href="images/touch-icon-ipad.png">
