tinker starting page css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>DIYR</title>
-  <!-- Fauna One font on Google fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Belgrano' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300|Advent+Pro:400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/main.css">
   <!-- Webpage Icon -->
   <link rel="apple-touch-icon" href="images/touch-icon-iphone.png">
@@ -22,8 +21,11 @@
     <div id="icon"><img src="" alt=""></div>
   </header>
   <article id="intro_wrapper">
-    <p><abbr title="Do It Yourself Renewable">DIYR</abbr> (Do It Yourself Renewable) is a swift web application helping you design a better home renewable energy system based on your budget and location.</p>
+    <p>a swift web app helping you design a better home renewable energy system.</p>
   </article>
-  <button>Start</button>
+  <div id="button">
+    <a href="#">Start</a>
+  </div>
+  
 </body>
 </html>
